# switcharoo

./: .gitignore  .gitmodules  .release-please-manifest.json  CHANGELOG.md  CONFIGURE.md  Cargo.toml  Configure.md  DEBUG.md  DEVELOPMENT.md  LICENSE  NIX.md  PKGBUILD  README.md  build.rs  fix.sh  flake.nix  justfile  release-please-config.json  renovate.json  test.sh
config-lib/: Cargo.toml
config-lib/src/: check.rs  explain.rs  lib.rs  load.rs  modifier.rs  save.rs  structs.rs
config-lib/src/generate/: config.rs  css.rs  systemd.rs  tui.rs
config-lib/src/migrate/: check.rs  convert.rs  migrate_config.rs  mod.rs  old_structs.rs
config-lib/src/migrate/m1t2/: convert.rs  mod.rs  old_structs.rs
core-lib/: Cargo.toml  build.rs
core-lib/src/: data.rs  ini.rs  ini_owned.rs  lib.rs  listener.rs  path.rs  send.rs  theme_icon_cache.rs  transfer.rs  util.rs
core-lib/src/binds/: generate.rs  mod.rs  structs.rs  transfer.rs
core-lib/src/config/: binds.rs  check.rs  explain.rs  load.rs  mod.rs  path.rs  save.rs  structs.rs
core-lib/src/config/generate/: autocomplete.rs  config.rs  css.rs  default.css  default.service  mod.rs  systemd.rs  tui.rs  write.rs
core-lib/src/config/migrate/: convert.rs  mod.rs  old_structs.rs
core-lib/src/default/: mod.rs
core-lib/src/transfer/: mod.rs  receive.rs  send.rs  structs.rs
core-lib/src/util/: const.rs  default_desktop_file.rs  defaults.rs  exec.rs  helpers.rs  mod.rs  path.rs  transfer.rs  version.rs
crates/clipboard-lib/: Cargo.toml
crates/clipboard-lib/src/: lib.rs  test_clipboard.rs
crates/clipboard-lib/src/config/: mod.rs
crates/clipboard-lib/src/store/: compact.rs  image.rs  listen.rs  mime.rs  mod.rs  rw.rs  save_image.rs  save_map.rs  save_text.rs  util.rs  write.rs
crates/clipboard-lib/src/util/: brotli_compressor.rs  compress.rs  crypt.rs  lz4_compressor.rs  mod.rs  secret_service.rs  zstd_compressor.rs
crates/config-edit-lib/: Cargo.toml
crates/config-edit-lib/src/: bind.rs  footer.rs  lib.rs  root.rs  shortcut_dialog.rs  start.rs  startv.rs  structs.rs  styles.css  update.rs  update_changes_view.rs  util.rs
crates/config-edit-lib/src/components/: changes.rs  footer.rs  generate.rs  json_preview.rs  launcher.rs  mod.rs  nix_preview.rs  root.rs  shortcut_dialog.rs  style.rs  switch.rs  theme.rs  windows.rs  windows_overview.rs
crates/config-edit-lib/src/views/: changes.rs  json_preview.rs  mod.rs
crates/config-lib/: Cargo.toml
crates/config-lib/src/: actions.rs  check.rs  explain.rs  lib.rs  load.rs  modifier.rs  save.rs  structs.rs
crates/config-lib/src/generate/: autocomplete.rs  config.rs  css.rs  default.css  mod.rs  tui.rs
crates/config-lib/src/migrate/: check.rs  migrate_config.rs  mod.rs
crates/config-lib/src/style/: list.rs  load.rs  mod.rs  structs.rs
crates/core-lib/: Cargo.toml
crates/core-lib/src/: const.rs  data.rs  ini.rs  ini_owned.rs  lib.rs  listener.rs  notify.rs  path.rs
crates/core-lib/src/binds/: mod.rs  transfer.rs
crates/core-lib/src/default/: mod.rs
crates/core-lib/src/transfer/: send.rs  structs.rs
crates/core-lib/src/util/: boot.rs  exec.rs  exists.rs  helpers.rs  mod.rs  path.rs
crates/exec-lib/: Cargo.toml
crates/exec-lib/src/: binds.rs  collect.rs  kill.rs  lib.rs  listener.rs  plugin.rs  run.rs  switch.rs  util.rs
crates/hyprland-plugin/: Cargo.toml  build.rs
crates/hyprland-plugin/plugin/: .gitignore  Makefile  README.md  test-hyprland.conf
crates/hyprland-plugin/plugin/src/: defs-test.h  defs.h  exit.cpp  globals.h  handlers.h  init.cpp  key-press.cpp  keyboard-focus.cpp  layer-change.cpp  main.cpp  mouse-button.cpp  send.cpp  send.h
crates/hyprland-plugin/plugin/src-52/: exit.cpp  handlers.h  init.cpp  key-press.cpp  layer-change.cpp  mouse-button.cpp
crates/hyprland-plugin/plugin/src-54/: defs-test.h  defs.h  globals.h  init.cpp  key-press.cpp  keyboard-focus.cpp  layer-change.cpp  mouse-button.cpp  send.cpp  send.h
crates/hyprland-plugin/src/: build.rs  configure.rs  extract.rs  lib.rs  test.rs
crates/launcher-lib/: Cargo.toml
crates/launcher-lib/src/: close.rs  create.rs  css.rs  debug.rs  global.rs  open.rs  stop.rs  styles.css  update.rs
crates/windows-lib/: Cargo.toml
crates/windows-lib/src/: css.rs  data.rs  global.rs  icon.rs  keybinds.rs  lib.rs  next.rs  sort.rs  styles.css
crates/windows-lib/src/switch/: mod.rs  (+8 more)
dep-crates/wl-clipboard-rs/: Cargo.toml
dep-crates/wl-clipboard-rs/src/: copy.rs  lib.rs  paste.rs
exec-lib/: Cargo.toml
exec-lib/src/: binds.rs  collect.rs  lib.rs  listener.rs  plugin.rs  run.rs  switch.rs  util.rs
hyprland-plugin/: Cargo.toml  build.rs
hyprland-plugin/plugin/: .gitignore  CMakeLists.txt  Makefile  README.md  defs-test.hpp  defs.hpp  defs.in  exit.cpp  globals.hpp  init.cpp  key-press.cpp  layer-change.cpp  main.cpp  test-hyprland.conf
hyprland-plugin/plugin-2/: .gitignore  Makefile  all.cpp  defs-test.hpp  defs.hpp
hyprland-plugin/plugin/src/: globals.h  handlers.h  init.cpp  key-press.cpp  layer-change.cpp  mouse-button.cpp
hyprland-plugin/src/: build.rs  configure.rs  extract.rs  lib.rs
hyprland-rs/: Cargo.toml
hyprland-rs/examples/: dispatch_async.rs  events.rs  events_async.rs  keyword.rs
hyprland-rs/hyprland-macros/: Cargo.toml
hyprshell/: Cargo.toml
hyprshell/src/: cli.rs  default-styles.css  receive.rs
launcher-lib/: Cargo.toml
launcher-lib/src/: cache.rs  close.rs  create.rs  css.rs  data.rs  debug.rs  desktop_map.rs  global.rs  keybinds.rs  lib.rs  match.rs  open.rs  run.rs  stop.rs  styles.css  update.rs  util.rs
launcher-lib/src/plugins/: applications.rs  calc.rs  mod.rs  path.rs  search.rs  shell.rs  terminal.rs
test-global/: Cargo.toml
test-global/src/: main.rs
windows-lib/: Cargo.toml
windows-lib/src/: close.rs  create.rs  css.rs  data.rs  desktop_map.rs  global.rs  icon.rs  keybinds.rs  lib.rs  next.rs  open_overview.rs  open_switch.rs  sort.rs  stop.rs  styles.css  update.rs
windows-lib/src/overview/: close.rs  create.rs  mod.rs  open.rs  stop.rs  update.rs
windows-lib/src/switch/: close.rs  create.rs  open.rs  stop.rs  update.rs
(+152 files in other folders)
