[package]
name = "hyprshell-config-lib"
documentation = "https://docs.rs/hyprshell-config-lib"
version = "4.5.0"
description = "A library for reading, writing and migrating configuration files for hyprshell"
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

inquire = { version = "0.7.5", optional = true, default-features = false, features = ["termion"] }
smart-default = { version = "0.7.1" }
ron = { version = "0.10.1" }
serde_json5 = { version = "0.2.1", optional = true }
toml = { version = "0.9.2", optional = true }

[features]
json5_config = ["dep:serde_json5"]
toml_config = ["dep:toml"]
generate_config = ["dep:inquire"]
no-default-config-values = []
launcher_calc_plugin = []