[package]
name = "hyprshell-core-lib"
documentation = "https://docs.rs/hyprshell-core-lib"
version = "0.5.4"
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
serde_json.workspace = true

notify = { version = "8.0.0", features = [] }
inquire = { version = "0.7.5", optional = true, default-features = false, features = ["termion"] }
serde = { version = "1.0.217", features = ["derive"] }
smart-default = { version = "0.7.1" }
ron = { version = "0.10.1" }
semver = { version = "1.0.26" }
toml = { version = "0.8.20", optional = true }

[build-dependencies]
which = { version = "7.0.3", default-features = false }

[features]
toml_config = ["dep:toml"]
generate_config = ["dep:inquire"]
calc = []
