[package]
name = "hyprshell-exec-lib"
documentation = "https://docs.rs/hyprshell-exec-lib"
version = "4.2.5"
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
core-lib.workspace = true
hyprland = { version = "0.4.0-beta.2", features = ["async-lite", "dispatch", "keyword", "data", "listener", "ctl", "config"], default-features = false }
