[package]
name = "hyprshell"
readme = "../README.md"
edition.workspace = true
description.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
exclude = [
    ".idea/*",
    ".github/*",
    "imgs"
]

[dependencies]
anyhow = { version = "1.0.95" }
clap = { version = "4.5.23", features = ["derive"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "ansi"], default-features = false }

rand = { version = "0.9.0" }
async-channel = { version = "2.3.1", default-features = true }
gtk = { version = "0.9.6", package = "gtk4", default-features = false, features = ["v4_6"] }

core-lib = { path = "../core-lib", package = "hyprshell-core-lib", version = "0.1.1" }
exec-lib = { path = "../exec-lib", package = "hyprshell-exec-lib", version = "0.1.1" }
windows-lib = { path = "../windows-lib", package = "hyprshell-windows-lib", version = "0.1.1" }
launcher-lib = { path = "../launcher-lib", package = "hyprshell-launcher-lib", optional = true, version = "0.1.1" }

[features]
default = ["json_config", "toml_config", "generate_config_command", "launcher"]
generate_config_command = ["core-lib/generate_config"]
json_config = ["core-lib/json_config"]
toml_config = ["core-lib/toml_config"]
debug_command = []
launcher = ["dep:launcher-lib"]
bar = []