[package]
name = "hyprshell"
readme = "../README.md"
documentation = "https://docs.rs/hyprshell"
edition.workspace = true
description.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
exclude = [
    ".idea/*",
    ".github/*",
]

[dependencies]
anyhow.workspace = true
tracing.workspace = true
gtk.workspace = true
clap = { version = "4.5.23", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "ansi"], default-features = false }

rand = { version = "0.9.0" }
async-channel = { version = "2.3.1", default-features = true }

core-lib.workspace = true
exec-lib.workspace = true
windows-lib.workspace = true
launcher-lib = { workspace = true, optional = true }

[features]
default = ["json_config", "toml_config", "generate_config_command", "launcher"]
generate_config_command = ["core-lib/generate_config"]
json_config = ["core-lib/json_config"]
toml_config = ["core-lib/toml_config"]
debug_command = []
launcher = ["dep:launcher-lib"]
bar = []
