[package]
name = "hyprshell-launcher-lib"
edition.workspace = true
description.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tracing = { version = "0.1.41" }
anyhow = { version = "1.0.95" }
serde_json = { version = "1.0.135" }
chrono = "0.4.40"

gtk4-layer-shell = { version = "0.5.0" }
gtk = { version = "0.9.6", package = "gtk4", default-features = false, features = ["v4_6"] }

core-lib = { path = "../core-lib", package = "hyprshell-core-lib", version = "0.1.1" }