[package]
name = "hyprshell-launcher-lib"
documentation = "https://docs.rs/hyprshell-launcher-lib"
version = "0.4.2"
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
gtk.workspace = true
gtk4-layer-shell.workspace = true
core-lib.workspace = true
exec-lib.workspace = true
serde_json.workspace = true
chrono = "0.4.40"
calc = { version = "0.4.0", optional = true, default-features = false, features = [] }

[features]
calc = ["dep:calc"]