[package]
name = "test-global"
version.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
ashpd = { version = "0.11.0", default-features = false, features = ["gtk4_wayland", "tracing", "tokio"] }
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
gtk4 = "0.9.6"
gtk4-layer-shell = "0.5.0"
futures-lite = "2.6.0"
