[package]
name = "hyprshell-windows-lib"
edition.workspace = true
description.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tracing = { version = "0.1.41" }
anyhow = { version = "1.0.95" }
regex = { version = "1.11.1" }

gtk4-layer-shell = { version = "0.5.0" }
gtk = { version = "0.9.6", package = "gtk4", default-features = false, features = ["v4_6"] }

core-lib = { path = "../core-lib", package = "hyprshell-core-lib", version = "0.1.1" }
exec-lib = { path = "../exec-lib", package = "hyprshell-exec-lib", version = "0.1.1" }