[package]
name = "hyprshell-windows-lib"
documentation = "https://docs.rs/hyprshell-windows-lib"
version = "4.2.0"
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
gtk.workspace = true
gtk4-layer-shell.workspace = true
core-lib.workspace = true
exec-lib.workspace = true
regex = { version = "1.11.1" }
