[package]
name = "hyprshell-clipboard-lib"
documentation = "https://docs.rs/hyprshell-clipboard-lib"
version = "4.7.0"
description = "A library monitoring and storing clipboard contents"
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
core-lib.workspace = true
fast_image_resize = { version = "5.3.0", features = ["image"] }
wl_clipboard = { package = "hyprshell-wl-clipboard-rs", path = "../../dep-crates/wl-clipboard-rs", version = "=4.7.0" }
bincode = { version = "2.0.1", features = ["serde"] }
image = { version = "0.25.8" }
lz4_flex = { version = "0.11" }


[lints]
workspace = true
