[package]
name = "hyprshell-config-edit-lib"
documentation = "https://docs.rs/hyprshell-config-edit-lib"
version = "4.8.1"
description = "A library for editing the config file with a gui"
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tracing.workspace = true
config-lib.workspace = true
relm4 = { version = "0.10.0", default-features = false, features = ["libadwaita", "macros"] }
relm4-components = "0.10.0"
relm4-macros = { version = "0.10.0" }

[features]
launcher_calc_plugin = []

[lints]
workspace = true
