[package]
name = "hyprshell-config-edit-lib"
documentation = "https://docs.rs/hyprshell-config-edit-lib"
version = "4.8.2"
description = "A library for editing the config file with a gui"
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tracing.workspace = true
config-lib.workspace = true
core-lib.workspace = true
relm4.workspace = true
relm4-components = "0.10.0"

# needed because relm4 version is too old for v1_8
_adw = { version = "0.8.1", package = "libadwaita", features = ["v1_8"] }

[features]
launcher_calc_plugin = []

[lints]
workspace = true
