[package]
name = "switcharoo-config-lib"
documentation = "https://docs.rs/switcharoo-config-lib"
version = "4.9.2"
description = "A library for reading, writing and migrating configuration files for switcharoo"
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
core-lib.workspace = true
serde.workspace = true
serde_json.workspace = true

smart-default = { version = "0.7.1" }
ron = { version = "0.12.0" }
toml = { version = "0.9.5" }
serde_json5 = { version = "0.2.1", optional = true }

[features]
json5_config = ["dep:serde_json5"]
ci_no_default_config_values = []

[lints]
workspace = true

[dev-dependencies]
test-log.workspace = true
