[package]
name = "hyprshell-core-lib"
documentation = "https://docs.rs/hyprshell-core-lib"
version = "4.9.2"
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
#config-lib.workspace = true
serde_json.workspace = true
serde.workspace = true
notify = { version = "8.2.0", features = [], default-features = false }
notify-rust = { version = "4.11.7", features = ["zbus"] }

[features]
json5_config = []

[lints]
workspace = true

[dev-dependencies]
test-log.workspace = true
