[package]
name = "hyprshell-exec-lib"
documentation = "https://docs.rs/hyprshell-exec-lib"
version = "4.8.2"
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
core-lib.workspace = true
config-lib.workspace = true
hyprland-plugin.workspace = true
semver.workspace = true
hyprland = { package = "hyprshell-hyprland", path = "../../dep-crates/hyprland-rs", features = ["async-lite", "dispatch", "keyword", "data", "listener", "ctl", "config"], default-features = false, version = "=4.8.2" }

[lints]
workspace = true
