[package]
name = "switcharoo-hyprland-plugin"
documentation = "https://docs.rs/switcharoo-hyprland-plugin"
version = "4.9.2"
description = "Plugin for hyprland, used to monitor keypresses"
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
core-lib.workspace = true
semver.workspace = true
tempfile = { version = "3.20.0", default-features = false }
zip = { version = "5.0.0", default-features = false }

[build-dependencies]
zip = { version = "5.0.0", default-features = false }

[lints]
workspace = true

[dev-dependencies]
test-log.workspace = true
