[package]
name = "hyprshell-launcher-lib"
documentation = "https://docs.rs/hyprshell-launcher-lib"
version = "4.8.2"
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
relm4.workspace = true
gtk4-layer-shell.workspace = true
core-lib.workspace = true
exec-lib.workspace = true
serde_json.workspace = true
async-channel.workspace = true
config-lib.workspace = true
rink-core = { version = "0.8.0", optional = true, features = ["bundle-files"] }
chrono = "0.4.41"

[features]
calc = ["dep:rink-core"]

[lints]
workspace = true

[dev-dependencies]
test-log.workspace = true
