[package]
version = "4.8.2" # remember to update html_root_url
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/YaLTeR/wl-clipboard-rs"
keywords = ["wayland", "clipboard"]
name = "hyprshell-wl-clipboard-rs"
description = "Access to the Wayland clipboard for terminal and other window-less applications."

readme = "README.md"
documentation = "https://docs.rs/wl-clipboard-rs"
categories = ["os"]

[dependencies]
libc = "0.2.170"
log = "0.4.26"
os_pipe = { version = "1.2.1", features = ["io_safety"] }
rustix = { version = "0.38.44", features = ["fs", "event"] }
tempfile = "3.17.1"
thiserror = "2"
tree_magic_mini = "3.1.6"
wayland-backend = "0.3.8"
wayland-client = "0.31.8"
wayland-protocols = { version = "0.32.6", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3.6", features = ["client"] }

[dev-dependencies]
wayland-server = "0.31.7"
wayland-protocols = { version = "0.32.6", features = ["server", "staging"] }
wayland-protocols-wlr = { version = "0.3.6", features = ["server"] }
proptest = "1.6.0"
proptest-derive = "0.5.1"

[features]
# Link to libwayland-client.so instead of using the Rust implementation.
native_lib = ["wayland-backend/client_system", "wayland-backend/server_system"]

dlopen = ["native_lib", "wayland-backend/dlopen", "wayland-backend/dlopen"]
